--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "hero-sms-com-integration",
-  "title": "hero-sms.com integration",
-  "description": "",
+  "title": "Hero-Sms.com Integration",
+  "description": "Manage SMS activations through Hero-SMS.com API",
   "icon": "extension-icon.png",
   "author": "samuel_mikula",
   "platforms": [
@@ -13,7 +13,7 @@
   "commands": [
     {
       "name": "get-phone-number",
-      "title": "Get phone number",
+      "title": "Get Phone Number",
       "description": "Request a new phone number for SMS activation",
       "mode": "view"
     },
